--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -2,7 +2,7 @@ name: Sync from upstream
 
 on:
   schedule:
-    - cron: '*/5 * * * *' # 매시간 동기화
+    - cron: '* * * * *' # 매시간 동기화
   workflow_dispatch:
 
 jobs:
